add Gitiles plugin

--- a/gerrit-docker/gerrit.config
+++ b/gerrit-docker/gerrit.config
@@ -17,5 +17,18 @@
 	listenUrl = http://*:8080/
 [cache]
 	directory = cache
+[Gitiles]
+        type = custom
+        linkname = gitiles
+        url = plugins/gitiles/
+        revision = ${project}/+/${commit}
+        project = ${project}
+        branch = ${project}/+/${branch}
+        filehistory = ${project}/+log/${branch}/${file}
 [gitweb]
-	cgi = /usr/lib/cgi-bin/gitweb.cgi
+        linkname = gitiles
+        url = plugins/gitiles/
+        revision = ${project}/+/${commit}
+        project = ${project}
+        branch = ${project}/+/${branch}
+        filehistory = ${project}/+log/${branch}/${file}
